--- a/Twitter_data_collection_and_analysis.Rmd
+++ b/Twitter_data_collection_and_analysis.Rmd
@@ -748,23 +748,9 @@ t.test(stringsentiment, mu = 0, alternative = "two.sided")
 postweets$sentiment <- "positive"
 negtweets$sentiment <- "negative"
 posnegtweetsfull <- rbind(postweets,negtweets)
-mean(posnegtweetsfull$favorite_count)
-posnegtweetsfulllikes.aov <- aov(formula = favorite_count ~ sentiment,
-                   data = posnegtweetsfull)
-posnegtweetsfulllikes.lm <- lm(formula = favorite_count ~ sentiment,
-                   data = posnegtweetsfull)
-summary(posnegtweetsfulllikes.aov)
-TukeyHSD(posnegtweetsfulllikes.aov)
-summary(posnegtweetsfulllikes.lm)
+t.test(posnegtweetsfull$favorite_count, mu = 0, alternative = "two.sided")
 #positive/negative tweet retweets
-mean(posnegtweetsfull$retweet_count)
-posnegtweetsfullretweets.aov <- aov(formula = retweet_count ~ sentiment,
-                   data = posnegtweetsfull)
-posnegtweetsfullretweets.lm <- lm(formula = retweet_count ~ sentiment,
-                   data = posnegtweetsfull)
-summary(posnegtweetsfullretweets.aov)
-TukeyHSD(posnegtweetsfullretweets.aov)
-summary(posnegtweetsfullretweets.lm)
+t.test(posnegtweetsfull$retweet_count, mu = 0, alternative = "two.sided")
 ```
 
 ```{r maptweets}
